# weather-proxy

./: .env.docker.example  .env.host.example  .gitignore  .ruff.toml  Architectural Design Diagram.md  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  render.yaml
.github/workflows/: ci.yml
api/: middleware.py
api/v1/: schemas.py
core/: services.py
core/domain/: exceptions.py  models.py  ports.py
docs/: architecture.md  current_state.md  graceful-shutdown.md  implementation_guide_prometheus.md  resilience.md  test-coverage.md
infra/: cache.py  logging.py  open_meteo.py  request_context.py
scripts/: Verification.md  verify_adapter.py  verify_caching.py  verify_impl.py  verify_logging_context.py  verify_metrics_endpoint.py  verify_middleware.py  verify_resilience.py
tests/: conftest.py  test_api.py  test_context_propagation.py  test_core.py  test_infra_cache.py  test_infra_provider.py  test_middleware.py  test_shutdown.py
