[project]
name = "weather-proxy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.4"
dependencies = [
    "requests>=2.32.5",
    "fastapi>=0.110.0",
    "pydantic>=2.0.0",
    "httpx>=0.27.0",
    "uvicorn>=0.29.0",
    "redis>=7.1.0",
    "circuitbreaker>=2.1.3",
]

[tool.uv]
dev-dependencies = [
    "termcolor>=3.3.0",
    "ruff>=0.8.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
]
